# Eventic

./: README.md  pyproject.toml
.github/workflows/: cicd.yml
tests/: event_test.py
