[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "eventic"
version = "0.0.1"
authors = [
  { name="TechnoBro03"},
]
description = "A lightweight, strongly typed event library."
readme = "README.md"

requires-python = ">=3.10"

classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]

license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "mypy"
]